Restore index.html to the state of commit 92a3004

--- a/index.html
+++ b/index.html
@@ -1,36 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Nuri Snack</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Title</title>
 </head>
 <body>
-    <h1>Welcome to Nuri Snack</h1>
-    <!-- New Reports Tab -->
-    <div id="reports">
-        <h2>Laporan (Reports)</h2>
-        <ul>
-            <li><button onclick="showReport('daily')">Daily Report</button></li>
-            <li><button onclick="showReport('weekly')">Weekly Report</button></li>
-            <li><button onclick="showReport('monthly')">Monthly Report</button></li>
-            <li><button onclick="showReport('product')">Product Report</button></li>
-            <li><button onclick="showReport('paymentMethod')">Payment Method Report</button></li>
-        </ul>
-        <button onclick="exportToPDF()">Export to PDF</button>
-        <button onclick="exportToExcel()">Export to Excel</button>
-    </div>
-    <script>
-        function showReport(type) {
-            alert('Showing ' + type + ' report');
-            // Implement the report logic here
-        }
-        function exportToPDF() {
-            alert('Exporting to PDF');
-            // Implement the PDF export logic here
-        }
-        function exportToExcel() {
-            alert('Exporting to Excel');
-            // Implement the Excel export logic here
-        }
-    </script>
+    <h1>Welcome to Your Website!</h1>
+    <p>This is the content of the page.</p>
 </body>
 </html>
